:bug: Fixed Charset error